v0.9.2 (XXX)
- improve robustness of text extraction
  - thanks to Evan Arnold for reporting

v0.9.1 (21st December 2010)
- force gem to only install on ruby 1.8.7 or higher
  - maintaining supprot for earlier versions takes more time than I have
    available at the moment
- bug: fix parsing of obscure pdf name format
- bug: fix behaviour when loaded in confunction with htmldoc gem

v0.9.0 (19th November 2010)
- support for pdf 1.5+ files that use object and xref streams
- support streams that use a flate filter with the predictor option
- ensure all content instructions are parsed when split over multiple stream
  - thanks to Jack Rusher for reporting
- Various string parsing bug
  - some character conversions to utf-8 were failing (thanks Andrea Barisani)
  - hashes with nested hex strings were tokenising wronly (thanks Evan Arnold)
  - escaping bug in tokenising of literal strings (thanks David Westerink)
- Fix a bug that prevented PDFs with white space after the EOF marker from loading
  - thanks to Solomon White for reporting the issue
- Add support for de-filtering some LZW compressed streams
  - thanks to Jose Ignacio Rubio Iradi for the patch
- some small speed improvements
- API CHANGE: PDF::Hash renamed to PDF::Reader::ObjectHash
  - having a class named Hash was confusing for users

v0.8.6 (27th August 2010)
- new method: hash#page_references
  - returns references to all page objects, gives rapid access to objects
    for a given page

v0.8.5 (11th April 2010)
- fix a regression introduced in 0.8.4.
  - Parameters passed to resource_font callback were inadvertently changed

v0.8.4 (30th March 2010)
- fix parsing of files that use Form XObjects
  - thanks to Andrea Barisani for reporting the issue
- fix two issues that caused a small number of characters to convert to Unicode
  incorrectly
  - thanks to Andrea Barisani for reporting the issue
- require 'pdf-reader' now works a well as 'pdf/reader'