@@ -1,6 +1,8 @@
 v0.9.2 (XXX)
-- improve robustness of text extraction
+- bug: improve robustness of text extraction
   - thanks to Evan Arnold for reporting
+- bug: fix loading of nested resources on XObjects
+  - thanks to Samuel Williams for reporting
 
 v0.9.1 (21st December 2010)
 - force gem to only install on ruby 1.8.7 or higher
